--- a/themes/broken-theme/docroot/_diffs/css/custom_common.css
+++ b/themes/broken-theme/docroot/_diffs/css/custom_common.css
@@ -10,7 +10,6 @@
 	body {
 		color: #555;
 		font-weight: 200;
-		line-height: 3em;
 	}
 
 	a {
@@ -144,6 +143,10 @@
 		.control-group {
 			margin-bottom: 15px;
 		}
+	}
+
+	.lfr-search .control-group {
+		margin-bottom: 0;
 	}
 
 	@include respond-to(phone) {
