--- a/portlets/knowledge-base-portlet/docroot/navigation/css/main.css
+++ b/portlets/knowledge-base-portlet/docroot/navigation/css/main.css
@@ -2,7 +2,7 @@
 
 .knowledge-base-portlet-navigation {
 	.tree-node .tree-label {
-		color: #009ae5;
+		color: #009AE5;
 		font-size: 20px;
 		line-height: 20px;
 		margin-bottom: 5px;
